objects/Order_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Air_PO_Number__c</fullName>
        <label>Air PO Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_PO__c</fullName>
        <formula>IF(NOT( ISBLANK(Air_PO_Number__c)),IMAGE(&apos;resource/1457714939000/plane24&apos;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Async__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically checked if stale date and/or new backorder date processing will be performed asynchronously.</inlineHelpText>
        <label>Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Date__c</fullName>
        <inlineHelpText>Most recent date the Client was contacted with a changed promise date</inlineHelpText>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backorder_Quantity__c</fullName>
        <description>Quantity that is back-ordered for this line item</description>
        <label>Backorder Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CW_N_C_Flag__c</fullName>
        <label>CW N/C Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_SKU_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup relationship between products and orders, so that iPIM information can go from Products to Order Lines</description>
        <label>CW SKU ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CW_SKU_Name__c</fullName>
        <formula>CW_SKU_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW SKU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Upload_DateTime__c</fullName>
        <label>CW Upload Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <description>Date the line item was canceled</description>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Quantity__c</fullName>
        <description>Quantity that was canceled for this line item</description>
        <label>Cancel Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>CW_SKU_ID__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <formula>CW_SKU_ID__r.Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <formula>CW_SKU_ID__r.Collection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <formula>CW_SKU_ID__r.Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinate_Group__c</fullName>
        <description>Group items to be shipped together</description>
        <label>Coordinate Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Available_Date__c</fullName>
        <inlineHelpText>Most recent available date that has been communicated to the Client</inlineHelpText>
        <label>Current Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Delay_Date__c</fullName>
        <inlineHelpText>Most recent delivery date calculated in CW. This may not have been communicated to the Client</inlineHelpText>
        <label>Current Delay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Item__c</fullName>
        <formula>CW_SKU_ID__r.Custom_Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Original_Available_Date__c</fullName>
        <formula>Current_Delay_Date__c - Original_Available_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between Current Delay Date and Original Available Date.</inlineHelpText>
        <label>Days Since Original Available Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelayFeed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically checked if this Order Line requires new backorder date processing.</inlineHelpText>
        <label>DelayFeed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delay_Feed_History__c</fullName>
        <label>Delay Feed History</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delay_Feed__c</fullName>
        <label>Delay Feed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CW_SKU_ID__r.Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXT_OrderShipToLine_Number__c</fullName>
        <externalId>true</externalId>
        <label>EXT OrderShipToLine Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Code__c</fullName>
        <description>11 or 13</description>
        <label>Exchange Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Description__c</fullName>
        <description>Damaged or Defective</description>
        <label>Exchange Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Ship_Date__c</fullName>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Ship_Date__c</fullName>
        <description>Used to hold shipping for customer</description>
        <inlineHelpText>Used to hold shipping for customer</inlineHelpText>
        <label>Future Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HDL_Market__c</fullName>
        <label>HDL Market</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HDL_Number__c</fullName>
        <label>HDL Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HDL</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Warehouse_Date__c</fullName>
        <inlineHelpText>The date this Order Line is expected to arrive in the warehouse.</inlineHelpText>
        <label>In Warehouse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Index_Price__c</fullName>
        <description>Offer Price in CW?</description>
        <label>Index Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Membership_Renewal_Sku__c</fullName>
        <description>Checks to see if the SKU in the line item is a Membership SKU. Not restricted to Renewal SKUs.</description>
        <formula>IF(AND(LEN(CW_SKU_Name__c)&gt;9,CONTAINS($Setup.Member_Renewal_SKU__c.SKU_Names__c,CW_SKU_Name__c)),TRUE,FALSE)</formula>
        <label>Is Membership Renewal Sku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>CW_SKU_ID__r.CW_Item_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <formula>CW_SKU_ID__r.CW_Item_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>This field is populated by information from CW. It is hidden from the page layout because the Order LIne Number (standard name field) is required on the page layout, and this would in essence duplicate information. There is a workflow rule that takes this number and populates it into the line number name field.</description>
        <label>Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Order_Date__c</fullName>
        <description>Entry Date of Line</description>
        <label>Line Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Status_Description__c</fullName>
        <description>Blank = Open
C = Canceled
X = Closed</description>
        <label>Line Status Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Status__c</fullName>
        <description>Blank = Open
C = Canceled
X = Closed</description>
        <label>Line Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member ID</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MembershipAutoRenewalSKU__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, order line references one of the RH membership auto-renewal SKUs.</inlineHelpText>
        <label>MembershipAutoRenewalSKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miracle_Range_End_Date__c</fullName>
        <label>Miracle Range End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Miracle_Range_Start_Date__c</fullName>
        <label>Miracle Range Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monogram_able__c</fullName>
        <formula>CW_SKU_ID__r.Monogram_able__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monogram-able</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Days_Since_Previous_Notification__c</fullName>
        <label>Number Days Since Previous Notification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Days_Backordered__c</fullName>
        <label>Number of Total Days Backordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line_Update_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Update User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <description>Order Quantity of Line</description>
        <label>Order Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Reserve_Date__c</fullName>
        <description>Date the line item was reserved</description>
        <label>Order Reserve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Available_Date__c</fullName>
        <inlineHelpText>Original date promised to the Client</inlineHelpText>
        <label>Original Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PONumber1__c</fullName>
        <label>PO Number 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumber2__c</fullName>
        <label>PO Number 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumber3__c</fullName>
        <label>PO Number 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Order Line has personalizations</description>
        <label>Personalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pick_Print_Date__c</fullName>
        <description>Date the line item was printed to be shipped</description>
        <label>Pick Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pick_Print_Quantity__c</fullName>
        <description>Quantity that was printed for this line item</description>
        <label>Pick Print Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Available_Date__c</fullName>
        <label>Previous Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Override_Code__c</fullName>
        <label>Price Override Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_Thumbnail__c</fullName>
        <formula>CW_SKU_ID__r.Product_Image_Thumbnail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Order_Number__c</fullName>
        <label>Order Number</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <description>Date the customer was refunded</description>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Method__c</fullName>
        <description>Payment method used to refund the customer</description>
        <label>Refund Method</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reorder_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Times This Order Line has been reordered by customer</description>
        <inlineHelpText>please increment or decrements to the value number of Times This Order Line has been reordered by customer</inlineHelpText>
        <label>Reorder Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserve_DC__c</fullName>
        <label>Reserve DC</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_Quantity__c</fullName>
        <description>Quantity that is reserved for this line item</description>
        <label>Reserved Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Quantity__c</fullName>
        <label>Return Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Reason_Code__c</fullName>
        <description>11 or 13</description>
        <label>Return Reason Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Reason_Description__c</fullName>
        <description>Damaged or Defective</description>
        <label>Return Reason Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>Date the line item was shipped</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Day_Phone__c</fullName>
        <formula>Ship_To__r.Ship_to_Day_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Day Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Email__c</fullName>
        <formula>Ship_To__r.Ship_to_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Night_Phone__c</fullName>
        <formula>Ship_To__r.Ship_to_Night_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Night Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the ship to lookup, and how you will create a relationship between the ship to and the order line.</description>
        <label>Ship To</label>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Via_Formula__c</fullName>
        <formula>CASE( Ship_Via__c ,
&quot;0&quot;, &quot;UPS Package Delivery - Ground&quot;,
&quot;1&quot;, &quot;Furniture Package Delivery - Ground&quot;,
&quot;2&quot;, &quot;UPS Second Day &quot;,
&quot;3&quot;, &quot;UPS Next Day&quot;,
&quot;4&quot;, &quot;Special Use&quot;,
&quot;5&quot;, &quot;Mid Tier Furniture Delivery&quot;,
&quot;6&quot;, &quot;White Glove Furniture Delivery&quot;,
&quot;7&quot;, &quot;Gift Card 2nd Day Air&quot;,
&quot;8&quot;, &quot;Gift Card Next Day Air&quot;,
&quot;9&quot;, &quot;Swatch (USPS)&quot;,
&quot;10&quot;, &quot;Curbside SPO&quot;,
&quot;77&quot;, &quot;Freight Forward&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Via</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <description>Carrier</description>
        <inlineHelpText>Carrier</inlineHelpText>
        <label>Ship Via</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address__c</fullName>
        <formula>Ship_To__r.Ship_to_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Customer_Number1__c</fullName>
        <formula>Ship_To__r.Ship_to_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Customer_Number__c</fullName>
        <description>CW Ship to Customer Number</description>
        <label>Ship to Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Name__c</fullName>
        <formula>Ship_To__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Number__c</fullName>
        <formula>Ship_To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_DC__c</fullName>
        <label>Shipped DC</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <description>Quantity that was shipped for this line item</description>
        <label>Shipped Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>CW_SKU_ID__r.CW_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Out_Quantity__c</fullName>
        <description>Discontinued - Could not be ordered</description>
        <label>Sold Out Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StaleDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically checked if this Order Line requires stale date processing (expected date is or was in the past).</inlineHelpText>
        <label>StaleDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <formula>CW_SKU_ID__r.Sub_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Price of Line</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <formula>CW_SKU_ID__r.Vendor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <formula>CW_SKU_ID__r.Vendor_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Style_Number__c</fullName>
        <formula>CW_SKU_ID__r.Vendor_Style_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Style Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRTA_Received_Credited_Date__c</fullName>
        <label>WRTA Received/Credited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Item_Description__c</fullName>
        <formula>CW_SKU_ID__r.Web_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Item Description</label>
        <type>Text</type>
    </fields>
    <label>Order Line</label>
    <nameField>
        <label>Order Line Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OrderLineNumberCannotBeChanged</fullName>
        <active>true</active>
        <description>Order Line Number cannot be changed by anyone other than the System Administrator or the API Only user.</description>
        <errorConditionFormula>AND(NOT(OR($Profile.Name=&apos;System Administrator&apos;,$Profile.Name=&apos;API Only&apos;)), ISCHANGED(Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot change the Order Line Number</errorMessage>
    </validationRules>
</CustomObject>